--- a/css/styles.css
+++ b/css/styles.css
@@ -531,6 +531,7 @@ ul {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 24px;
 }
 .modal-close {
   display: flex;
@@ -544,6 +545,7 @@ ul {
   width: 24px;
   height: 24px;
   color: #2e2f42;
+  margin-bottom: 24px;
 }
 .is-hidden {
   opacity: 0;
@@ -558,4 +560,88 @@ ul {
   background-color: #404bbf;
   color: #ffffff;
   fill: currentColor;
+}
+/* MODAL FORM*/
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+.modal-form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid #2e2f42;
+  border-radius: 4px;
+  padding-left: 38px;
+  color: #000;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-input:focus {
+  border: 1px solid #4d5ae5;
+  outline: none;
+}
+.title-modal-form {
+  font-family: var(--main-font-family-for-site);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: calc(24 / 16);
+  color: #2e2f42;
+  text-align: center;
+  margin-bottom: 16px;
+}
+.modal-form-input-desc {
+  display: block;
+  font-family: var(--main-font-family-for-site);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  color: #8e8f99;
+  margin-bottom: 4px;
+}
+.modal-form-field {
+  margin-bottom: 8px;
+}
+.modal-form-message {
+  width: 100%;
+  height: 120px;
+  border: 1px solid #2e2f42;
+  border-radius: 4px;
+  padding-left: 16px;
+  padding-top: 8px;
+  font-family: var(--main-font-family-for-site);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  resize: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-message:focus {
+  border: 1px solid #4d5ae5;
+  outline: none;
+}
+.modal-form-submit {
+  background: #4d5ae5;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  font-family: var(--main-font-family-for-site);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: calc(24 / 16);
+  color: #ffffff;
+  padding: 16px 32px 16px 32px;
+  text-align: center;
+}
+.modal-form-icon {
+  position: absolute;
+  display: block;
+  top: 50%;
+  left: 16px;
+  transform: translate(0, -50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-input-wrapper {
+  position: relative;
+  display: block;
+}
+.modal-form-input:focus + .modal-form-icon {
+  fill: #4d5ae5;
 }
