--- a/css/styles.css
+++ b/css/styles.css
@@ -569,7 +569,7 @@ ul {
 .modal-form-input {
   width: 100%;
   height: 40px;
-  border: 1px solid #2e2f42;
+  border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 38px;
   color: #000;
@@ -603,7 +603,7 @@ ul {
 .modal-form-message {
   width: 100%;
   height: 120px;
-  border: 1px solid #2e2f42;
+  border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-left: 16px;
   padding-top: 8px;
