--- a/css/styles.css
+++ b/css/styles.css
@@ -607,12 +607,14 @@ ul {
   border-radius: 4px;
   padding-left: 16px;
   padding-top: 8px;
+  resize: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-message::placeholder {
   font-family: var(--main-font-family-for-site);
   font-weight: 400;
   font-size: 12px;
   line-height: calc(14 / 12);
-  resize: none;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-message:focus {
   border: 1px solid #4d5ae5;
@@ -644,4 +646,25 @@ ul {
 }
 .modal-form-input:focus + .modal-form-icon {
   fill: #4d5ae5;
+}
+.modal-form-check-desc::before {
+  content: '';
+  width: 16px;
+  height: 16px;
+  border: 1px solid #2e2f42;
+  border-radius: 2px;
+  display: block;
+  cursor: pointer;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-form-check:checked + .modal-form-check-desc::before {
+  background: #404bbf;
+  border: 1px solid #404bbf;
+  background-image: url(../images/modal-form-policy.svg);
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+.modal-form-check:checked + .modal-form-check-desc::before {
+  outline: 1px solid #4d5ae5;
 }
