--- a/css/styles.css
+++ b/css/styles.css
@@ -519,8 +519,6 @@ ul {
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
-  width: 408px;
-  height: 576px;
   background: #fcfcfc;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -629,8 +627,17 @@ ul {
   font-size: 16px;
   line-height: calc(24 / 16);
   color: #ffffff;
-  padding: 16px 32px 16px 32px;
+  padding: 16px 32px;
   text-align: center;
+  align-self: center;
+  width: 169px;
+  height: 56px;
+  border: none;
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+.modal-form-submit:hover {
+  background: #404bbf;
 }
 .modal-form-icon {
   position: absolute;
@@ -647,6 +654,16 @@ ul {
 .modal-form-input:focus + .modal-form-icon {
   fill: #4d5ae5;
 }
+.modal-form-check-desc {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  color: #8e8f99;
+  letter-spacing: 0.04em;
+  display: flex;
+  align-items: center;
+  margin-bottom: 24px;
+}
 .modal-form-check-desc::before {
   content: '';
   width: 16px;
@@ -657,6 +674,7 @@ ul {
   cursor: pointer;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
     background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  margin-right: 8px;
 }
 .modal-form-check:checked + .modal-form-check-desc::before {
   background: #404bbf;
@@ -665,6 +683,9 @@ ul {
   background-repeat: no-repeat;
   background-position: 50% 50%;
 }
-.modal-form-check:checked + .modal-form-check-desc::before {
+.modal-form-check:focus + .modal-form-check-desc::before {
   outline: 1px solid #4d5ae5;
+}
+.modal-form-field-comment {
+  margin-bottom: 16px;
 }
