--- a/css/styles.css
+++ b/css/styles.css
@@ -413,6 +413,41 @@ ul {
   color: var(--footer-text);
   margin-bottom: 16px;
 }
+.subscribe-footer {
+  padding-left: 80px;
+}
+.subscribe-title {
+  font-family: var(--main-font-family-for-site);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: calc(24 / 16);
+  color: #ffffff;
+}
+.subscribe-input-footer {
+  background-color: #2e2f42;
+  border: 1px solid #ffffff;
+  border-radius: 4px;
+  height: 40px;
+}
+.subscribe-btn {
+  background: #4d5ae5;
+  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 24px;
+  gap: 16px;
+  width: 165px;
+  height: 40px;
+  display: flex;
+  color: #ffffff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: calc(24 / 16);
+  border: none;
+}
+.svg-subscribe {
+  fill: #ffffff;
+}
 /*Страница портфолио без хедера и футера*/
 .button-portfolio {
   font-weight: 500;
