--- a/css/styles.css
+++ b/css/styles.css
@@ -422,12 +422,16 @@ ul {
   font-size: 16px;
   line-height: calc(24 / 16);
   color: #ffffff;
+  margin-bottom: 16px;
 }
 .subscribe-input-footer {
   background-color: #2e2f42;
   border: 1px solid #ffffff;
   border-radius: 4px;
   height: 40px;
+  width: 264px;
+  color: #ffffff;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 }
 .subscribe-btn {
   background: #4d5ae5;
@@ -444,9 +448,19 @@ ul {
   font-size: 16px;
   line-height: calc(24 / 16);
   border: none;
+  flex-direction: row;
+  cursor: pointer;
+}
+.subscribe-btn:hover,
+.subscribe-btn:focus {
+  background-color: #404bbf;
 }
 .svg-subscribe {
   fill: #ffffff;
+}
+.footer-form-input {
+  display: flex;
+  gap: 24px;
 }
 /*Страница портфолио без хедера и футера*/
 .button-portfolio {
