--- a/css/styles.css
+++ b/css/styles.css
@@ -432,6 +432,7 @@ ul {
   width: 264px;
   color: #ffffff;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  padding-left: 16px;
 }
 .subscribe-btn {
   background: #4d5ae5;
