--- a/css/styles.css
+++ b/css/styles.css
@@ -361,6 +361,7 @@ ul {
 /*Футер*/
 .footer-div-two-section {
   display: flex;
+  justify-content: space-between;
 }
 .footer {
   background-color: var(--accent-text-color);
@@ -376,8 +377,7 @@ ul {
   height: 72px;
   margin-top: 16px;
 }
-.footer-container {
-}
+
 .social-media-div-footer {
   margin-left: 120px;
 }
@@ -433,6 +433,18 @@ ul {
   color: #ffffff;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   padding-left: 16px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.subscribe-input-footer:focus {
+  border: 1px solid #4d5ae5;
+  outline: none;
+}
+.subscribe-input-footer::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(24 / 12);
+  letter-spacing: 0.04em;
+  color: #ffffff;
 }
 .subscribe-btn {
   background: #4d5ae5;
@@ -451,6 +463,7 @@ ul {
   border: none;
   flex-direction: row;
   cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .subscribe-btn:hover,
 .subscribe-btn:focus {
@@ -594,6 +607,9 @@ ul {
   height: 24px;
   color: #2e2f42;
   margin-bottom: 24px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .is-hidden {
   opacity: 0;
